--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,7 +13,6 @@
     "express-handlebars": "^5.3.4",
     "method-override": "^3.0.0",
     "mongoose": "^6.0.12",
-    "nodemon": "^2.0.14",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^5.2.15",
