--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-handlebars": "^5.3.4",
     "method-override": "^3.0.0",
     "mongoose": "^6.0.12",
+    "nodemon": "^2.0.14",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^5.2.15",
